requires user to say go ahead but it does it
